--- a/apkTools_release/tools/analyzer/api_debugger.html
+++ b/apkTools_release/tools/analyzer/api_debugger.html
@@ -5,56 +5,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>API 调试工具</title>
+  <link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      min-height: 100vh;
-      padding: 20px
-    }
+    /* 继承theme.css的基础样式 */
+    /* 以下是工具页面特定的样式覆盖 */
 
     .container {
       max-width: 1600px;
-      margin: 0 auto;
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, .3);
-      overflow: hidden;
       display: flex;
       flex-direction: column;
-      height: calc(100vh - 40px)
-    }
-
-    .header {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
-      padding: 20px 30px;
-      text-align: center;
-      flex-shrink: 0;
-      position: relative
+      height: calc(100vh - 40px);
     }
 
     .home-btn {
       position: absolute;
-      top: 15px;
-      left: 20px;
+      top: var(--spacing-md);
+      left: var(--spacing-lg);
       width: 40px;
       height: 40px;
       background: rgba(255, 255, 255, 0.2);
       border: 2px solid rgba(255, 255, 255, 0.3);
-      border-radius: 50%;
+      border-radius: var(--radius-full);
       display: flex;
       align-items: center;
       justify-content: center;
-      color: #fff;
+      color: var(--color-text-on-primary);
       text-decoration: none;
-      font-size: 20px;
+      font-size: var(--font-size-large);
       transition: all .3s;
       z-index: 10;
     }
@@ -65,21 +42,26 @@
       transform: scale(1.1);
     }
 
+    .header {
+      padding: var(--spacing-lg) var(--spacing-xl);
+      flex-shrink: 0;
+    }
+
     .header h1 {
-      font-size: 24px;
-      margin-bottom: 5px
+      font-size: var(--font-size-large);
+      margin-bottom: var(--spacing-xs);
     }
 
     .header p {
       opacity: .9;
-      font-size: 13px
+      font-size: var(--font-size-small);
     }
 
     .main-content {
       flex: 1;
       display: flex;
       flex-direction: column;
-      overflow: hidden
+      overflow: hidden;
     }
 
     .request-section {
@@ -87,65 +69,68 @@
       display: flex;
       flex-direction: column;
       overflow: hidden;
-      border-bottom: 2px solid #dee2e6
+      border-bottom: 2px solid var(--color-border);
     }
 
     .request-toolbar {
-      padding: 15px 20px;
-      background: #f8f9fa;
-      border-bottom: 1px solid #dee2e6;
+      padding: var(--spacing-md) var(--spacing-lg);
+      background: var(--color-background-alt);
+      border-bottom: 1px solid var(--color-border);
       display: flex;
-      gap: 10px;
+      gap: var(--spacing-sm);
       align-items: center;
-      flex-shrink: 0
+      flex-shrink: 0;
     }
 
     .method-select {
-      padding: 10px 15px;
+      padding: var(--spacing-sm) var(--spacing-md);
       background: linear-gradient(135deg, #07C160 0%, #42BD56 100%);
-      color: #fff;
+      color: var(--color-text-on-primary);
       border: none;
-      border-radius: 8px;
-      font-weight: 600;
-      font-size: 14px;
+      border-radius: var(--radius-sm);
+      font-weight: var(--font-weight-semibold);
+      font-size: var(--font-size-small);
       cursor: pointer;
       min-width: 80px;
-      position: relative
+      position: relative;
     }
 
     .method-select::after {
       content: '▼';
-      margin-left: 8px;
-      font-size: 10px
+      margin-left: var(--spacing-sm);
+      font-size: 10px;
     }
 
     .url-input {
       flex: 1;
-      padding: 10px 15px;
-      border: 2px solid #dee2e6;
-      border-radius: 8px;
-      font-size: 14px;
-      font-family: 'Courier New', monospace
+      padding: var(--spacing-sm) var(--spacing-md);
+      border: 2px solid var(--color-border);
+      border-radius: var(--radius-sm);
+      font-size: var(--font-size-small);
+      font-family: 'Courier New', monospace;
+      background: var(--color-surface);
+      color: var(--color-text);
     }
 
     .url-input:focus {
       outline: none;
-      border-color: #667eea
+      border-color: var(--color-primary);
+      box-shadow: 0 0 0 4px var(--color-shadow-primary);
     }
 
     .toolbar-buttons {
       display: flex;
-      gap: 10px
+      gap: var(--spacing-sm);
     }
 
     .btn {
-      padding: 10px 20px;
+      padding: var(--spacing-sm) var(--spacing-lg);
       border: none;
-      border-radius: 8px;
-      font-size: 14px;
-      font-weight: 600;
+      border-radius: var(--radius-sm);
+      font-size: var(--font-size-small);
+      font-weight: var(--font-weight-semibold);
       cursor: pointer;
-      transition: all .2s
+      transition: all .2s;
     }
 
     .btn-primary {
@@ -574,7 +559,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
+      <a href="../../index.html" class="home-btn" title="返回首页">🏠</a>
       <h1>🌐 API 调试工具</h1>
       <p>支持 HTTP 请求和 WebSocket (WSS) 连接调试，类似 APIFOX，包含请求历史记录。</p>
     </div>
@@ -1570,7 +1555,9 @@
       responseBody.innerHTML = html;
     }
   </script>
-  <script src="./tools.js"></script>
+  <script src="../../assets/js/tools.js"></script>
+  <script src="../../assets/js/themes.js"></script>
+  <script src="../../assets/js/theme-ui.js"></script>
 </body>
 
 </html>
