--- a/apkTools_release/tools/analyzer/apk_analyzer.html
+++ b/apkTools_release/tools/analyzer/apk_analyzer.html
@@ -5,55 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>APK 信息提取工具</title>
+    <link rel="stylesheet" href="../../assets/css/theme.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/forge/1.3.1/forge.min.js"></script>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            padding: 20px;
-        }
+        /* 继承theme.css的基础样式 */
+        /* 以下是工具页面特定的样式覆盖 */
 
         .container {
             max-width: 900px;
-            margin: 0 auto;
-            background: white;
-            border-radius: 16px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            overflow: hidden;
-        }
-
-        .header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 30px;
-            text-align: center;
-            position: relative;
         }
 
         .home-btn {
             position: absolute;
-            top: 20px;
-            left: 20px;
+            top: var(--spacing-lg);
+            left: var(--spacing-lg);
             width: 40px;
             height: 40px;
             background: rgba(255, 255, 255, 0.2);
             border: 2px solid rgba(255, 255, 255, 0.3);
-            border-radius: 50%;
+            border-radius: var(--radius-full);
             display: flex;
             align-items: center;
             justify-content: center;
-            color: #fff;
+            color: var(--color-text-on-primary);
             text-decoration: none;
-            font-size: 20px;
+            font-size: var(--font-size-large);
             transition: all .3s;
             z-index: 10;
         }
@@ -65,48 +43,48 @@
         }
 
         .header h1 {
-            font-size: 28px;
-            margin-bottom: 10px;
+            font-size: var(--font-size-xlarge);
+            margin-bottom: var(--spacing-sm);
         }
 
         .header p {
             opacity: 0.9;
-            font-size: 14px;
+            font-size: var(--font-size-small);
         }
 
         .content {
-            padding: 30px;
+            padding: var(--spacing-xl);
         }
 
         .upload-area {
-            border: 3px dashed #667eea;
-            border-radius: 12px;
-            padding: 40px;
+            border: 3px dashed var(--color-primary);
+            border-radius: var(--radius-md);
+            padding: var(--spacing-xxl);
             text-align: center;
-            background: #f8f9fa;
+            background: var(--color-background-alt);
             transition: all 0.3s;
             cursor: pointer;
         }
 
         .upload-area:hover {
-            background: #e9ecef;
-            border-color: #764ba2;
+            background: var(--color-surface-alt);
+            border-color: var(--color-primary-dark);
         }
 
         .upload-area.dragover {
-            background: #e7f3ff;
-            border-color: #667eea;
+            background: var(--color-hover);
+            border-color: var(--color-primary);
         }
 
         .upload-icon {
             font-size: 48px;
-            margin-bottom: 15px;
+            margin-bottom: var(--spacing-md);
         }
 
         .upload-text {
-            font-size: 16px;
-            color: #495057;
-            margin-bottom: 10px;
+            font-size: var(--font-size-base);
+            color: var(--color-text);
+            margin-bottom: var(--spacing-sm);
         }
 
         .file-input {
@@ -114,18 +92,19 @@
         }
 
         .btn {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
+            background: linear-gradient(135deg, var(--color-primary) 0%, var(--color-primary-dark) 100%);
+            color: var(--color-text-on-primary);
             border: none;
-            padding: 12px 30px;
-            border-radius: 8px;
-            font-size: 16px;
+            padding: var(--spacing-sm) var(--spacing-xl);
+            border-radius: var(--radius-sm);
+            font-size: var(--font-size-base);
             cursor: pointer;
             transition: transform 0.2s;
         }
 
         .btn:hover {
             transform: translateY(-2px);
+            box-shadow: var(--shadow-md);
         }
 
         .btn:active {
@@ -133,7 +112,7 @@
         }
 
         .results {
-            margin-top: 30px;
+            margin-top: var(--spacing-xl);
             display: none;
         }
 
@@ -142,11 +121,11 @@
         }
 
         .result-item {
-            background: #f8f9fa;
-            border-left: 4px solid #667eea;
-            padding: 15px 20px;
-            margin-bottom: 15px;
-            border-radius: 8px;
+            background: var(--color-background-alt);
+            border-left: 4px solid var(--color-primary);
+            padding: var(--spacing-md) var(--spacing-lg);
+            margin-bottom: var(--spacing-md);
+            border-radius: var(--radius-sm);
         }
 
         .result-label {
@@ -246,7 +225,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
+            <a href="../../index.html" class="home-btn" title="返回首页">🏠</a>
             <h1>📦 APK 信息提取工具</h1>
             <p>解析 APK，读取包名与证书指纹等信息，支持拖拽上传与结果复制。</p>
         </div>
@@ -1024,7 +1003,9 @@
             }
         });
     </script>
-    <script src="./tools.js"></script>
+    <script src="../../assets/js/tools.js"></script>
+    <script src="../../assets/js/themes.js"></script>
+    <script src="../../assets/js/theme-ui.js"></script>
 </body>
 
 </html>
