--- a/apkTools_release/tools/converter/currency_converter.html
+++ b/apkTools_release/tools/converter/currency_converter.html
@@ -4,53 +4,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>汇率转换工具</title>
+  <link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      min-height: 100vh;
-      padding: 20px;
-    }
-
+    /* 继承theme.css的基础样式 */
+    /* 以下是工具页面特定的样式覆盖 */
+    
     .container {
       max-width: 1400px;
-      margin: 0 auto;
-      background: #fff;
-      border-radius: 20px;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, .3);
-      overflow: hidden;
-    }
-
-    .header {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
-      padding: 40px 30px;
-      text-align: center;
-      position: relative;
     }
 
     .home-btn {
       position: absolute;
-      top: 20px;
-      left: 20px;
+      top: var(--spacing-lg);
+      left: var(--spacing-lg);
       width: 44px;
       height: 44px;
       background: rgba(255, 255, 255, 0.15);
       border: 2px solid rgba(255, 255, 255, 0.3);
-      border-radius: 50%;
+      border-radius: var(--radius-full);
       display: flex;
       align-items: center;
       justify-content: center;
-      color: #fff;
+      color: var(--color-text-on-primary);
       text-decoration: none;
-      font-size: 20px;
+      font-size: var(--font-size-large);
       transition: all .3s;
       z-index: 10;
       backdrop-filter: blur(10px);
@@ -63,38 +41,38 @@
     }
 
     .header h1 {
-      font-size: 32px;
-      margin-bottom: 12px;
-      font-weight: 700;
+      font-size: var(--font-size-xxlarge);
+      margin-bottom: var(--spacing-sm);
+      font-weight: var(--font-weight-bold);
       text-shadow: 0 2px 10px rgba(0, 0, 0, .2);
     }
 
     .header p {
       opacity: .95;
-      font-size: 15px;
-      line-height: 1.6;
+      font-size: var(--font-size-base);
+      line-height: var(--line-height);
     }
 
     .content {
-      padding: 40px 30px;
+      padding: var(--spacing-xxl) var(--spacing-xl);
     }
 
     /* 汇率换算工具 */
     .converter-section {
-      background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
-      border-radius: 16px;
-      padding: 30px;
-      margin-bottom: 30px;
-      border: 1px solid #dee2e6;
+      background: var(--color-background-alt);
+      border-radius: var(--radius-lg);
+      padding: var(--spacing-xl);
+      margin-bottom: var(--spacing-xl);
+      border: 1px solid var(--color-border);
     }
 
     .converter-section h2 {
-      font-size: 22px;
-      color: #2d3748;
-      margin-bottom: 24px;
+      font-size: var(--font-size-large);
+      color: var(--color-text);
+      margin-bottom: var(--spacing-lg);
       display: flex;
       align-items: center;
-      gap: 10px;
+      gap: var(--spacing-sm);
     }
 
     .converter-form {
@@ -113,40 +91,41 @@
     }
 
     .input-label {
-      font-size: 13px;
-      color: #718096;
-      font-weight: 600;
+      font-size: var(--font-size-small);
+      color: var(--color-text-secondary);
+      font-weight: var(--font-weight-semibold);
       text-transform: uppercase;
       letter-spacing: 0.5px;
     }
 
     .input-wrapper {
       display: flex;
-      gap: 12px;
+      gap: var(--spacing-sm);
       align-items: stretch;
     }
 
     .amount-input {
       flex: 1;
-      padding: 14px 18px;
-      border: 2px solid #e9ecef;
-      border-radius: 12px;
-      font-size: 18px;
-      font-weight: 600;
+      padding: var(--spacing-sm) var(--spacing-lg);
+      border: 2px solid var(--color-border);
+      border-radius: var(--radius-md);
+      font-size: var(--font-size-large);
+      font-weight: var(--font-weight-semibold);
       transition: all 0.3s;
-      background: #fff;
+      background: var(--color-surface);
+      color: var(--color-text);
     }
 
     .amount-input:focus {
       outline: none;
-      border-color: #667eea;
-      box-shadow: 0 0 0 4px rgba(102, 126, 234, .1);
+      border-color: var(--color-primary);
+      box-shadow: 0 0 0 4px var(--color-shadow-primary);
     }
 
     .currency-select {
       min-width: 150px;
-      padding: 14px 18px;
-      border: 2px solid #e9ecef;
+      padding: var(--spacing-sm) var(--spacing-lg);
+      border: 2px solid var(--color-border);
       border-radius: 12px;
       font-size: 16px;
       background: #fff;
@@ -658,7 +637,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
+      <a href="../../index.html" class="home-btn" title="返回首页">🏠</a>
       <h1></h1>
       <p></p>
     </div>
@@ -1395,7 +1374,9 @@
     // 页面加载完成后初始化
     document.addEventListener('DOMContentLoaded', init);
   </script>
-  <script src="./tools.js"></script>
+  <script src="../../assets/js/tools.js"></script>
+  <script src="../../assets/js/themes.js"></script>
+  <script src="../../assets/js/theme-ui.js"></script>
 </body>
 
 </html>
