--- a/apkTools_release/tools/converter/svg_converter.html
+++ b/apkTools_release/tools/converter/svg_converter.html
@@ -5,148 +5,135 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SVG 互转 PNG/JPG/JPEG 工具</title>
+  <link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      min-height: 100vh;
-      padding: 20px
-    }
-
+    /* 继承theme.css的基础样式 */
+    /* 以下是工具页面特定的样式覆盖 */
+    
     .container {
       max-width: 1000px;
-      margin: 0 auto;
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, .3);
-      overflow: hidden
-    }
-
-    .header {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
-      padding: 30px;
-      text-align: center;
-      position: relative
     }
 
     .home-btn {
       position: absolute;
-      top: 20px;
-      left: 20px;
+      top: var(--spacing-lg);
+      left: var(--spacing-lg);
       width: 40px;
       height: 40px;
       background: rgba(255, 255, 255, 0.2);
       border: 2px solid rgba(255, 255, 255, 0.3);
-      border-radius: 50%;
+      border-radius: var(--radius-full);
       display: flex;
       align-items: center;
       justify-content: center;
-      color: #fff;
+      color: var(--color-text-on-primary);
       text-decoration: none;
-      font-size: 20px;
+      font-size: var(--font-size-large);
       transition: all .3s;
-      z-index: 10
+      z-index: 10;
     }
 
     .home-btn:hover {
       background: rgba(255, 255, 255, 0.3);
       border-color: rgba(255, 255, 255, 0.5);
-      transform: scale(1.1)
+      transform: scale(1.1);
     }
 
     .header h1 {
-      font-size: 28px;
-      margin-bottom: 10px
+      font-size: var(--font-size-xlarge);
+      margin-bottom: var(--spacing-sm);
     }
 
     .header p {
       opacity: .9;
-      font-size: 14px
+      font-size: var(--font-size-small);
     }
 
     .content {
-      padding: 30px
+      padding: var(--spacing-xl);
     }
 
     .form-section {
-      background: #f8f9fa;
-      border-radius: 12px;
-      padding: 25px;
-      margin-bottom: 25px
+      background: var(--color-background-alt);
+      border-radius: var(--radius-md);
+      padding: var(--spacing-lg);
+      margin-bottom: var(--spacing-lg);
     }
 
     .form-section h2 {
-      font-size: 20px;
-      color: #495057;
-      margin-bottom: 20px;
-      border-bottom: 2px solid #667eea;
-      padding-bottom: 10px
+      font-size: var(--font-size-large);
+      color: var(--color-text);
+      margin-bottom: var(--spacing-lg);
+      border-bottom: 2px solid var(--color-primary);
+      padding-bottom: var(--spacing-sm);
     }
 
     .file-upload-area {
-      border: 3px dashed #667eea;
-      border-radius: 12px;
-      padding: 40px;
+      border: 3px dashed var(--color-primary);
+      border-radius: var(--radius-md);
+      padding: var(--spacing-xxl);
       text-align: center;
-      background: #f8f9ff;
+      background: var(--color-hover);
       cursor: pointer;
-      transition: all .3s
+      transition: all .3s;
     }
 
     .file-upload-area:hover {
-      background: #f0f2ff;
-      border-color: #5568d3
+      background: var(--color-surface-alt);
+      border-color: var(--color-primary-dark);
     }
 
     .file-upload-area.dragover {
-      background: #e8ebff;
-      border-color: #4456c3
+      background: var(--color-hover);
+      border-color: var(--color-primary);
     }
 
     .file-upload-area input[type=file] {
-      display: none
+      display: none;
     }
 
     .controls-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 15px
+      gap: var(--spacing-md);
     }
 
     .form-group {
-      margin-bottom: 18px
+      margin-bottom: var(--spacing-lg);
     }
 
     .form-group label {
       display: block;
-      font-weight: 600;
-      color: #495057;
-      margin-bottom: 8px;
-      font-size: 14px
+      font-weight: var(--font-weight-semibold);
+      color: var(--color-text);
+      margin-bottom: var(--spacing-sm);
+      font-size: var(--font-size-small);
     }
 
     .form-group input,
     .form-group select {
       width: 100%;
-      padding: 12px;
-      border: 2px solid #dee2e6;
-      border-radius: 8px;
-      font-size: 14px
+      padding: var(--spacing-sm);
+      border: 2px solid var(--color-border);
+      border-radius: var(--radius-sm);
+      font-size: var(--font-size-small);
+      background: var(--color-surface);
+      color: var(--color-text);
+    }
+
+    .form-group input:focus,
+    .form-group select:focus {
+      outline: none;
+      border-color: var(--color-primary);
+      box-shadow: 0 0 0 4px var(--color-shadow-primary);
     }
 
     .btn {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
+      background: linear-gradient(135deg, var(--color-primary) 0%, var(--color-primary-dark) 100%);
+      color: var(--color-text-on-primary);
       border: none;
-      padding: 14px 35px;
-      border-radius: 8px;
+      padding: var(--spacing-sm) var(--spacing-xl);
+      border-radius: var(--radius-sm);
       font-size: 16px;
       font-weight: 600;
       cursor: pointer;
@@ -166,61 +153,61 @@
 
     .preview {
       display: flex;
-      gap: 20px;
-      flex-wrap: wrap
+      gap: var(--spacing-lg);
+      flex-wrap: wrap;
     }
 
     .card {
-      background: #fff;
-      border: 2px solid #dee2e6;
-      border-radius: 12px;
-      padding: 12px;
+      background: var(--color-surface);
+      border: 2px solid var(--color-border);
+      border-radius: var(--radius-md);
+      padding: var(--spacing-sm);
       text-align: center;
       flex: 1;
-      min-width: 280px
+      min-width: 280px;
     }
 
     .status {
       display: none;
-      margin-top: 12px;
-      padding: 10px;
-      border-radius: 8px
+      margin-top: var(--spacing-sm);
+      padding: var(--spacing-sm);
+      border-radius: var(--radius-sm);
     }
 
     .status.show {
-      display: block
+      display: block;
     }
 
     .status.success {
-      background: #d4edda;
-      color: #155724;
-      border: 1px solid #c3e6cb
+      background: rgba(16, 185, 129, 0.1);
+      color: var(--color-success);
+      border: 1px solid rgba(16, 185, 129, 0.3);
     }
 
     .status.error {
-      background: #f8d7da;
-      color: #721c24;
-      border: 1px solid #f5c6cb
+      background: rgba(239, 68, 68, 0.1);
+      color: var(--color-error);
+      border: 1px solid rgba(239, 68, 68, 0.3);
     }
 
     .loading {
       text-align: center;
-      padding: 20px;
-      display: none
+      padding: var(--spacing-lg);
+      display: none;
     }
 
     .loading.show {
-      display: block
+      display: block;
     }
 
     .spinner {
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid #667eea;
-      border-radius: 50%;
+      border: 4px solid var(--color-border-light);
+      border-top: 4px solid var(--color-primary);
+      border-radius: var(--radius-full);
       width: 40px;
       height: 40px;
       animation: spin 1s linear infinite;
-      margin: 0 auto 15px
+      margin: 0 auto var(--spacing-md);
     }
 
     @keyframes spin {
@@ -245,7 +232,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
+      <a href="../../index.html" class="home-btn" title="返回首页">🏠</a>
       <h1>🔄 SVG 互转 PNG/JPG/JPEG</h1>
       <p>支持上传 SVG 或 PNG/JPG/JPEG，进行相互转换与下载</p>
     </div>
@@ -253,9 +240,9 @@
       <div class="form-section">
         <h2>上传文件</h2>
         <div class="file-upload-area" id="uploadArea">
-          <div style="font-size:42px;color:#667eea;margin-bottom:10px">📁</div>
-          <div style="color:#495057;font-size:16px;margin-bottom:6px">点击或拖拽文件到此处</div>
-          <div style="color:#6c757d;font-size:12px">支持 SVG、PNG、JPG、JPEG</div>
+          <div style="font-size:42px;color:var(--color-primary);margin-bottom:10px">📁</div>
+          <div style="color:var(--color-text);font-size:var(--font-size-base);margin-bottom:6px">点击或拖拽文件到此处</div>
+          <div style="color:var(--color-text-secondary);font-size:var(--font-size-small)">支持 SVG、PNG、JPG、JPEG</div>
           <input type="file" id="fileInput" accept=".svg,image/*">
         </div>
         <div class="status" id="status"></div>
@@ -304,11 +291,11 @@
         <h2>预览</h2>
         <div class="preview">
           <div class="card">
-            <div style="font-weight:600;color:#495057;margin-bottom:8px">输入文件预览</div>
+            <div style="font-weight:var(--font-weight-semibold);color:var(--color-text);margin-bottom:var(--spacing-sm)">输入文件预览</div>
             <div id="inputPreview"></div>
           </div>
           <div class="card">
-            <div style="font-weight:600;color:#495057;margin-bottom:8px">输出结果预览</div>
+            <div style="font-weight:var(--font-weight-semibold);color:var(--color-text);margin-bottom:var(--spacing-sm)">输出结果预览</div>
             <img id="outputPreview" class="preview-image" alt="">
           </div>
         </div>
@@ -529,7 +516,9 @@
       setTimeout(() => URL.revokeObjectURL(url), 100);
     }
   </script>
-  <script src="./tools.js"></script>
+  <script src="../../assets/js/tools.js"></script>
+  <script src="../../assets/js/themes.js"></script>
+  <script src="../../assets/js/theme-ui.js"></script>
 </body>
 
 </html>
