--- a/apkTools_release/tools/converter/unit_converter.html
+++ b/apkTools_release/tools/converter/unit_converter.html
@@ -5,52 +5,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>单位转换工具</title>
+  <link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      min-height: 100vh;
-      padding: 20px;
-    }
-
-    .container {
-      max-width: 1400px;
-      margin: 0 auto;
-      background: #fff;
-      border-radius: 20px;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, .3);
-      overflow: hidden;
-    }
-
-    .header {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
-      padding: 40px 30px;
-      text-align: center;
-      position: relative;
-    }
+    /* 继承theme.css的基础样式 */
+    /* 以下是工具页面特定的样式覆盖 */
 
     .home-btn {
       position: absolute;
-      top: 20px;
-      left: 20px;
+      top: var(--spacing-lg);
+      left: var(--spacing-lg);
       width: 44px;
       height: 44px;
       background: rgba(255, 255, 255, 0.15);
       border: 2px solid rgba(255, 255, 255, 0.3);
-      border-radius: 50%;
+      border-radius: var(--radius-full);
       display: flex;
       align-items: center;
       justify-content: center;
-      color: #fff;
+      color: var(--color-text-on-primary);
       text-decoration: none;
-      font-size: 20px;
+      font-size: var(--font-size-large);
       transition: all .3s;
       z-index: 10;
       backdrop-filter: blur(10px);
@@ -63,20 +37,20 @@
     }
 
     .header h1 {
-      font-size: 32px;
-      margin-bottom: 12px;
-      font-weight: 700;
+      font-size: var(--font-size-xxlarge);
+      margin-bottom: var(--spacing-sm);
+      font-weight: var(--font-weight-bold);
       text-shadow: 0 2px 10px rgba(0, 0, 0, .2);
     }
 
     .header p {
       opacity: .95;
-      font-size: 15px;
-      line-height: 1.6;
+      font-size: var(--font-size-base);
+      line-height: var(--line-height);
     }
 
     .content {
-      padding: 40px 30px;
+      padding: var(--spacing-xxl) var(--spacing-xl);
     }
 
     .converter-grid {
@@ -86,18 +60,18 @@
     }
 
     .converter-card {
-      background: #fff;
-      border-radius: 16px;
-      padding: 24px;
-      border: 1px solid #e9ecef;
+      background: var(--color-surface);
+      border-radius: var(--radius-lg);
+      padding: var(--spacing-lg);
+      border: 1px solid var(--color-border);
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-      box-shadow: 0 2px 8px rgba(0, 0, 0, .05);
+      box-shadow: var(--shadow-sm);
     }
 
     .converter-card:hover {
       transform: translateY(-4px);
-      box-shadow: 0 8px 24px rgba(102, 126, 234, .15);
-      border-color: #667eea;
+      box-shadow: var(--shadow-md);
+      border-color: var(--color-primary);
     }
 
     .card-header {
@@ -273,7 +247,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
+      <a href="../../index.html" class="home-btn" title="返回首页">🏠</a>
       <h1>📐 单位转换工具</h1>
       <p>支持长度、重量、温度、面积、体积、时间、速度、数据、角度、压力等多种单位转换</p>
     </div>
@@ -579,7 +553,9 @@
     // 页面加载完成后初始化
     document.addEventListener('DOMContentLoaded', initConverters);
   </script>
-  <script src="./tools.js"></script>
+  <script src="../../assets/js/tools.js"></script>
+  <script src="../../assets/js/themes.js"></script>
+  <script src="../../assets/js/theme-ui.js"></script>
 </body>
 
 </html>
