--- a/apkTools_release/tools/developer/device_preview.html
+++ b/apkTools_release/tools/developer/device_preview.html
@@ -5,62 +5,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>机型预览信息工具</title>
+  <link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      min-height: 100vh;
-      padding: 20px
-    }
-
+    /* 继承theme.css的基础样式 */
+    /* 以下是工具页面特定的样式覆盖 */
+    
     .container {
       max-width: 1400px;
-      margin: 0 auto;
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, .3);
-      overflow: hidden
-    }
-
-    .header {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
-      padding: 30px;
-      text-align: center;
-      position: relative
-    }
-
-    .header h1 {
-      font-size: 28px;
-      margin-bottom: 10px
-    }
-
-    .header p {
-      opacity: .9;
-      font-size: 14px
     }
 
     .home-btn {
       position: absolute;
-      top: 20px;
-      left: 20px;
+      top: var(--spacing-lg);
+      left: var(--spacing-lg);
       width: 40px;
       height: 40px;
       background: rgba(255, 255, 255, 0.2);
       border: 2px solid rgba(255, 255, 255, 0.3);
-      border-radius: 50%;
+      border-radius: var(--radius-full);
       display: flex;
       align-items: center;
       justify-content: center;
-      color: #fff;
+      color: var(--color-text-on-primary);
       text-decoration: none;
-      font-size: 20px;
+      font-size: var(--font-size-large);
       transition: all .3s;
       z-index: 10;
     }
@@ -71,64 +39,77 @@
       transform: scale(1.1);
     }
 
+    .header h1 {
+      font-size: var(--font-size-xlarge);
+      margin-bottom: var(--spacing-sm);
+    }
+
+    .header p {
+      opacity: .9;
+      font-size: var(--font-size-small);
+    }
+
     .content {
-      padding: 30px
+      padding: var(--spacing-xl);
     }
 
     .search-section {
-      background: #f8f9fa;
-      border-radius: 12px;
-      padding: 25px;
-      margin-bottom: 25px
+      background: var(--color-background-alt);
+      border-radius: var(--radius-md);
+      padding: var(--spacing-lg);
+      margin-bottom: var(--spacing-lg);
     }
 
     .search-box {
       position: relative;
-      margin-bottom: 15px
+      margin-bottom: var(--spacing-md);
     }
 
     .search-input {
       width: 100%;
-      padding: 14px 50px 14px 20px;
-      border: 2px solid #dee2e6;
-      border-radius: 8px;
-      font-size: 16px;
-      transition: border-color .3s
+      padding: var(--spacing-sm) 50px var(--spacing-sm) var(--spacing-lg);
+      border: 2px solid var(--color-border);
+      border-radius: var(--radius-sm);
+      font-size: var(--font-size-base);
+      transition: border-color .3s;
+      background: var(--color-surface);
+      color: var(--color-text);
     }
 
     .search-input:focus {
       outline: none;
-      border-color: #667eea
+      border-color: var(--color-primary);
+      box-shadow: 0 0 0 4px var(--color-shadow-primary);
     }
 
     .search-icon {
       position: absolute;
-      right: 20px;
+      right: var(--spacing-lg);
       top: 50%;
       transform: translateY(-50%);
-      color: #6c757d;
-      font-size: 20px
+      color: var(--color-text-secondary);
+      font-size: var(--font-size-large);
     }
 
     .stats-info {
       display: flex;
-      gap: 20px;
+      gap: var(--spacing-lg);
       flex-wrap: wrap;
-      margin-top: 15px
+      margin-top: var(--spacing-md);
     }
 
     .stat-item {
-      background: #fff;
-      padding: 12px 20px;
-      border-radius: 8px;
-      border: 1px solid #dee2e6;
-      font-size: 14px;
-      color: #495057
+      background: var(--color-surface);
+      padding: var(--spacing-sm) var(--spacing-lg);
+      border-radius: var(--radius-sm);
+      border: 1px solid var(--color-border);
+      font-size: var(--font-size-small);
+      color: var(--color-text);
     }
 
     .stat-item strong {
-      color: #667eea;
-      margin-right: 5px
+      color: var(--color-primary);
+      margin-right: var(--spacing-xs);
     }
 
     .device-list {
@@ -551,7 +532,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
+      <a href="../../index.html" class="home-btn" title="返回首页">🏠</a>
       <h1>📱 机型预览信息工具</h1>
       <p>查看主流手机机型详细信息，支持模糊搜索（包含最新iPhone 17系列）</p>
     </div>
@@ -1150,7 +1131,9 @@
       }
     });
   </script>
-  <script src="./tools.js"></script>
+  <script src="../../assets/js/tools.js"></script>
+  <script src="../../assets/js/themes.js"></script>
+  <script src="../../assets/js/theme-ui.js"></script>
 </body>
 
 </html>
