--- a/apkTools_release/tools/formatter/json_formatter.html
+++ b/apkTools_release/tools/formatter/json_formatter.html
@@ -5,121 +5,103 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JSON 格式化工具</title>
+  <link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      min-height: 100vh;
-      padding: 20px
-    }
+    /* 继承theme.css的基础样式 */
+    /* 以下是工具页面特定的样式覆盖 */
 
     .container {
       max-width: 1400px;
-      margin: 0 auto;
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, .3);
-      overflow: hidden
-    }
-
-    .header {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
-      padding: 30px;
-      text-align: center;
-      position: relative
     }
 
     .header h1 {
-      font-size: 28px;
-      margin-bottom: 10px
+      font-size: var(--font-size-xlarge);
+      margin-bottom: var(--spacing-sm);
     }
 
     .header p {
       opacity: .9;
-      font-size: 14px
+      font-size: var(--font-size-small);
     }
 
     .content {
-      padding: 30px
+      padding: var(--spacing-xl);
     }
 
     .editor-container {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: 20px;
-      margin-bottom: 20px
+      gap: var(--spacing-lg);
+      margin-bottom: var(--spacing-lg);
     }
 
     @media (max-width: 768px) {
       .editor-container {
-        grid-template-columns: 1fr
+        grid-template-columns: 1fr;
       }
     }
 
     .editor-section {
-      background: #f8f9fa;
-      border-radius: 12px;
-      padding: 20px
+      background: var(--color-background-alt);
+      border-radius: var(--radius-md);
+      padding: var(--spacing-lg);
     }
 
     .editor-section h2 {
-      font-size: 18px;
-      color: #495057;
-      margin-bottom: 15px;
+      font-size: var(--font-size-large);
+      color: var(--color-text);
+      margin-bottom: var(--spacing-md);
       display: flex;
       justify-content: space-between;
-      align-items: center
+      align-items: center;
     }
 
     .editor-section h2 .status {
-      font-size: 12px;
-      font-weight: normal;
-      padding: 4px 8px;
-      border-radius: 4px;
-      background: #dc3545;
-      color: #fff
+      font-size: var(--font-size-small);
+      font-weight: var(--font-weight-normal);
+      padding: var(--spacing-xs) var(--spacing-sm);
+      border-radius: var(--radius-sm);
+      background: var(--color-error);
+      color: var(--color-text-on-primary);
     }
 
     .editor-section h2 .status.valid {
-      background: #28a745
+      background: var(--color-success);
     }
 
     textarea {
       width: 100%;
       min-height: 400px;
-      padding: 15px;
-      border: 2px solid #dee2e6;
-      border-radius: 8px;
+      padding: var(--spacing-md);
+      border: 2px solid var(--color-border);
+      border-radius: var(--radius-sm);
       font-family: 'Courier New', Consolas, monospace;
-      font-size: 14px;
-      line-height: 1.6;
+      font-size: var(--font-size-small);
+      line-height: var(--line-height);
       resize: vertical;
-      transition: border-color .3s
+      transition: border-color .3s;
+      background: var(--color-surface);
+      color: var(--color-text);
     }
 
     textarea:focus {
       outline: none;
-      border-color: #667eea
+      border-color: var(--color-primary);
+      box-shadow: 0 0 0 4px var(--color-shadow-primary);
     }
 
     .preview-section {
-      background: #fff;
-      border: 2px solid #dee2e6;
-      border-radius: 8px;
-      padding: 15px;
+      background: var(--color-surface);
+      border: 2px solid var(--color-border);
+      border-radius: var(--radius-sm);
+      padding: var(--spacing-md);
       min-height: 400px;
       max-height: 600px;
       overflow: auto;
       font-family: 'Courier New', Consolas, monospace;
-      font-size: 14px;
-      line-height: 1.6
+      font-size: var(--font-size-small);
+      line-height: var(--line-height);
+      color: var(--color-text);
     }
 
     .json-collapsible {
@@ -128,16 +110,16 @@
     }
 
     .json-collapsible:hover {
-      background: #f8f9fa;
+      background: var(--color-hover);
     }
 
     .json-collapsible::before {
       content: '▶';
       display: inline-block;
       width: 12px;
-      margin-right: 4px;
+      margin-right: var(--spacing-xs);
       transition: transform 0.2s;
-      color: #6c757d;
+      color: var(--color-text-secondary);
     }
 
     .json-collapsible.collapsed::before {
@@ -284,7 +266,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
+      <a href="../../index.html" class="home-btn" title="返回首页">🏠</a>
       <h1>📋 JSON 格式化工具</h1>
       <p>JSON 格式化、压缩、验证和可视化预览，支持语法高亮和实时验证。</p>
     </div>
@@ -595,7 +577,9 @@
     jsonInput.value = JSON.stringify(exampleJSON, null, 2);
     formatJSON();
   </script>
-  <script src="./tools.js"></script>
+  <script src="../../assets/js/tools.js"></script>
+  <script src="../../assets/js/themes.js"></script>
+  <script src="../../assets/js/theme-ui.js"></script>
 </body>
 
 </html>
