--- a/apkTools_release/tools/generator/icon_factory.html
+++ b/apkTools_release/tools/generator/icon_factory.html
@@ -5,147 +5,128 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>图标工厂 - iOS & Android</title>
+  <link rel="stylesheet" href="../../assets/css/theme.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      min-height: 100vh;
-      padding: 20px
-    }
-
+    /* 继承theme.css的基础样式 */
+    /* 以下是工具页面特定的样式覆盖 */
+    
     .container {
       max-width: 1100px;
-      margin: 0 auto;
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, .3);
-      overflow: hidden
-    }
-
-    .header {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
-      padding: 30px;
-      text-align: center;
-      position: relative
     }
 
     .home-btn {
       position: absolute;
-      top: 20px;
-      left: 20px;
+      top: var(--spacing-lg);
+      left: var(--spacing-lg);
       width: 40px;
       height: 40px;
       background: rgba(255, 255, 255, 0.2);
       border: 2px solid rgba(255, 255, 255, 0.3);
-      border-radius: 50%;
+      border-radius: var(--radius-full);
       display: flex;
       align-items: center;
       justify-content: center;
-      color: #fff;
+      color: var(--color-text-on-primary);
       text-decoration: none;
-      font-size: 20px;
+      font-size: var(--font-size-large);
       transition: all .3s;
-      z-index: 10
+      z-index: 10;
     }
 
     .home-btn:hover {
       background: rgba(255, 255, 255, 0.3);
       border-color: rgba(255, 255, 255, 0.5);
-      transform: scale(1.1)
+      transform: scale(1.1);
     }
 
     .header h1 {
-      font-size: 28px;
-      margin-bottom: 10px
+      font-size: var(--font-size-xlarge);
+      margin-bottom: var(--spacing-sm);
     }
 
     .header p {
       opacity: .9;
-      font-size: 14px
+      font-size: var(--font-size-small);
     }
 
     .content {
-      padding: 30px
+      padding: var(--spacing-xl);
     }
 
     .form-section {
-      background: #f8f9fa;
-      border-radius: 12px;
-      padding: 25px;
-      margin-bottom: 25px
+      background: var(--color-background-alt);
+      border-radius: var(--radius-md);
+      padding: var(--spacing-lg);
+      margin-bottom: var(--spacing-lg);
     }
 
     .form-section h2 {
-      font-size: 20px;
-      color: #495057;
-      margin-bottom: 20px;
-      border-bottom: 2px solid #667eea;
-      padding-bottom: 10px
+      font-size: var(--font-size-large);
+      color: var(--color-text);
+      margin-bottom: var(--spacing-lg);
+      border-bottom: 2px solid var(--color-primary);
+      padding-bottom: var(--spacing-sm);
     }
 
     .form-group {
-      margin-bottom: 18px
+      margin-bottom: var(--spacing-lg);
     }
 
     .form-group label {
       display: block;
-      font-weight: 600;
-      color: #495057;
-      margin-bottom: 8px;
-      font-size: 14px
+      font-weight: var(--font-weight-semibold);
+      color: var(--color-text);
+      margin-bottom: var(--spacing-sm);
+      font-size: var(--font-size-small);
     }
 
     .form-group input,
     .form-group select {
       width: 100%;
-      padding: 12px;
-      border: 2px solid #dee2e6;
-      border-radius: 8px;
-      font-size: 14px;
-      transition: border-color .3s
+      padding: var(--spacing-sm);
+      border: 2px solid var(--color-border);
+      border-radius: var(--radius-sm);
+      font-size: var(--font-size-small);
+      transition: border-color .3s;
+      background: var(--color-surface);
+      color: var(--color-text);
     }
 
     .form-group input:focus,
     .form-group select:focus {
       outline: none;
-      border-color: #667eea
+      border-color: var(--color-primary);
+      box-shadow: 0 0 0 4px var(--color-shadow-primary);
     }
 
     .file-upload-area {
-      border: 3px dashed #667eea;
-      border-radius: 12px;
-      padding: 40px;
+      border: 3px dashed var(--color-primary);
+      border-radius: var(--radius-md);
+      padding: var(--spacing-xxl);
       text-align: center;
-      background: #f8f9ff;
+      background: var(--color-hover);
       cursor: pointer;
-      transition: all .3s
+      transition: all .3s;
     }
 
     .file-upload-area:hover {
-      background: #f0f2ff;
-      border-color: #5568d3
+      background: var(--color-surface-alt);
+      border-color: var(--color-primary-dark);
     }
 
     .file-upload-area.dragover {
-      background: #e8ebff;
-      border-color: #4456c3
+      background: var(--color-hover);
+      border-color: var(--color-primary);
     }
 
     .file-upload-area input[type=file] {
-      display: none
+      display: none;
     }
 
     .btn {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
+      background: linear-gradient(135deg, var(--color-primary) 0%, var(--color-primary-dark) 100%);
+      color: var(--color-text-on-primary);
       border: none;
       padding: 14px 35px;
       border-radius: 8px;
@@ -259,7 +240,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
+      <a href="../../index.html" class="home-btn" title="返回首页">🏠</a>
       <h1>🎨 图标工厂</h1>
       <p>上传一个图标，生成 iOS 与 Android 标准尺寸与文件夹结构</p>
     </div>
@@ -267,9 +248,9 @@
       <div class="form-section">
         <h2>上传图标</h2>
         <div class="file-upload-area" id="uploadArea">
-          <div style="font-size:42px;color:#667eea;margin-bottom:10px">📁</div>
-          <div style="color:#495057;font-size:16px;margin-bottom:6px">点击或拖拽图标到此处</div>
-          <div style="color:#6c757d;font-size:12px">建议上传正方形 PNG，尺寸≥1024×1024</div>
+          <div style="font-size:42px;color:var(--color-primary);margin-bottom:10px">📁</div>
+          <div style="color:var(--color-text);font-size:var(--font-size-base);margin-bottom:6px">点击或拖拽图标到此处</div>
+          <div style="color:var(--color-text-secondary);font-size:var(--font-size-small)">建议上传正方形 PNG，尺寸≥1024×1024</div>
           <input type="file" id="iconInput" accept="image/*">
         </div>
         <div class="status" id="uploadStatus"></div>
@@ -529,7 +510,9 @@
       }
     });
   </script>
-  <script src="./tools.js"></script>
+  <script src="../../assets/js/tools.js"></script>
+  <script src="../../assets/js/themes.js"></script>
+  <script src="../../assets/js/theme-ui.js"></script>
 </body>
 
 </html>
