--- a/apkTools_release/tools/generator/string_generator.html
+++ b/apkTools_release/tools/generator/string_generator.html
@@ -5,148 +5,129 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>多种字符串生成器</title>
+  <link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      min-height: 100vh;
-      padding: 20px
-    }
+    /* 继承theme.css的基础样式 */
+    /* 以下是工具页面特定的样式覆盖 */
 
     .container {
       max-width: 1200px;
-      margin: 0 auto;
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, .3);
-      overflow: hidden
-    }
-
-    .header {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
-      padding: 30px;
-      text-align: center;
-      position: relative
     }
 
     .header h1 {
-      font-size: 28px;
-      margin-bottom: 10px
+      font-size: var(--font-size-xlarge);
+      margin-bottom: var(--spacing-sm);
     }
 
     .header p {
       opacity: .9;
-      font-size: 14px
+      font-size: var(--font-size-small);
     }
 
     .content {
-      padding: 30px
+      padding: var(--spacing-xl);
     }
 
     .generator-section {
-      background: #f8f9fa;
-      border-radius: 12px;
-      padding: 25px;
-      margin-bottom: 25px
+      background: var(--color-background-alt);
+      border-radius: var(--radius-md);
+      padding: var(--spacing-lg);
+      margin-bottom: var(--spacing-lg);
     }
 
     .generator-section h2 {
-      font-size: 20px;
-      color: #495057;
-      margin-bottom: 20px;
-      border-bottom: 2px solid #667eea;
-      padding-bottom: 10px
+      font-size: var(--font-size-large);
+      color: var(--color-text);
+      margin-bottom: var(--spacing-lg);
+      border-bottom: 2px solid var(--color-primary);
+      padding-bottom: var(--spacing-sm);
     }
 
     .form-group {
-      margin-bottom: 18px
+      margin-bottom: var(--spacing-lg);
     }
 
     .form-group label {
       display: block;
-      font-weight: 600;
-      color: #495057;
-      margin-bottom: 8px;
-      font-size: 14px
+      font-weight: var(--font-weight-semibold);
+      color: var(--color-text);
+      margin-bottom: var(--spacing-sm);
+      font-size: var(--font-size-small);
     }
 
     .form-group input,
     .form-group select {
       width: 100%;
-      padding: 12px;
-      border: 2px solid #dee2e6;
-      border-radius: 8px;
-      font-size: 14px;
-      transition: border-color .3s
+      padding: var(--spacing-sm);
+      border: 2px solid var(--color-border);
+      border-radius: var(--radius-sm);
+      font-size: var(--font-size-small);
+      transition: border-color .3s;
+      background: var(--color-surface);
+      color: var(--color-text);
     }
 
     .form-group input:focus,
     .form-group select:focus {
       outline: none;
-      border-color: #667eea
+      border-color: var(--color-primary);
+      box-shadow: 0 0 0 4px var(--color-shadow-primary);
     }
 
     .controls-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 15px;
-      margin-bottom: 15px
+      gap: var(--spacing-md);
+      margin-bottom: var(--spacing-md);
     }
 
     .btn {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #fff;
+      background: linear-gradient(135deg, var(--color-primary) 0%, var(--color-primary-dark) 100%);
+      color: var(--color-text-on-primary);
       border: none;
-      padding: 12px 24px;
-      border-radius: 8px;
-      font-size: 14px;
-      font-weight: 600;
+      padding: var(--spacing-sm) var(--spacing-lg);
+      border-radius: var(--radius-sm);
+      font-size: var(--font-size-small);
+      font-weight: var(--font-weight-semibold);
       cursor: pointer;
-      transition: transform .2s
+      transition: transform .2s;
     }
 
     .btn:hover {
       transform: translateY(-2px);
-      box-shadow: 0 5px 15px rgba(102, 126, 234, .4)
+      box-shadow: var(--shadow-md);
     }
 
     .btn-group {
       display: flex;
-      gap: 10px;
-      margin-top: 15px
+      gap: var(--spacing-sm);
+      margin-top: var(--spacing-md);
     }
 
     .result-section {
-      background: #fff;
-      border: 2px solid #dee2e6;
-      border-radius: 12px;
-      padding: 20px;
-      margin-top: 20px
+      background: var(--color-surface);
+      border: 2px solid var(--color-border);
+      border-radius: var(--radius-md);
+      padding: var(--spacing-lg);
+      margin-top: var(--spacing-lg);
     }
 
     .result-section h3 {
-      font-size: 16px;
-      color: #495057;
-      margin-bottom: 15px
+      font-size: var(--font-size-base);
+      color: var(--color-text);
+      margin-bottom: var(--spacing-md);
     }
 
     .result-box {
-      background: #f8f9fa;
-      border: 1px solid #dee2e6;
-      border-radius: 8px;
-      padding: 15px;
+      background: var(--color-background-alt);
+      border: 1px solid var(--color-border);
+      border-radius: var(--radius-sm);
+      padding: var(--spacing-md);
       min-height: 60px;
       word-break: break-all;
       font-family: 'Courier New', monospace;
-      font-size: 14px;
-      color: #495057;
+      font-size: var(--font-size-small);
+      color: var(--color-text);
       position: relative
     }
 
@@ -211,7 +192,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
+      <a href="../../index.html" class="home-btn" title="返回首页">🏠</a>
       <h1>🔤 多种字符串生成器</h1>
       <p>生成标准银行卡号、UDID、包名等常用字符串</p>
     </div>
@@ -616,7 +597,9 @@
       document.getElementById('randomNumberRangeGroup').style.display = type === 'randomNumber' ? 'block' : 'none';
     });
   </script>
-  <script src="./tools.js"></script>
+  <script src="../../assets/js/tools.js"></script>
+  <script src="../../assets/js/themes.js"></script>
+  <script src="../../assets/js/theme-ui.js"></script>
 </body>
 
 </html>
