--- a/apkTools_release/tools/generator/text_image_generator.html
+++ b/apkTools_release/tools/generator/text_image_generator.html
@@ -5,52 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>文字图片生成工具</title>
+    <link rel="stylesheet" href="../../assets/css/theme.css">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            padding: 20px;
-        }
-
+        /* 继承theme.css的基础样式 */
+        /* 以下是工具页面特定的样式覆盖 */
+        
         .container {
             max-width: 900px;
-            margin: 0 auto;
-            background: white;
-            border-radius: 16px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            overflow: hidden;
-        }
-
-        .header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 30px;
-            text-align: center;
-            position: relative;
         }
 
         .home-btn {
             position: absolute;
-            top: 20px;
-            left: 20px;
+            top: var(--spacing-lg);
+            left: var(--spacing-lg);
             width: 40px;
             height: 40px;
             background: rgba(255, 255, 255, 0.2);
             border: 2px solid rgba(255, 255, 255, 0.3);
-            border-radius: 50%;
+            border-radius: var(--radius-full);
             display: flex;
             align-items: center;
             justify-content: center;
-            color: #fff;
+            color: var(--color-text-on-primary);
             text-decoration: none;
-            font-size: 20px;
+            font-size: var(--font-size-large);
             transition: all .3s;
             z-index: 10;
         }
@@ -62,71 +40,74 @@
         }
 
         .header h1 {
-            font-size: 28px;
-            margin-bottom: 10px;
+            font-size: var(--font-size-xlarge);
+            margin-bottom: var(--spacing-sm);
         }
 
         .header p {
             opacity: 0.9;
-            font-size: 14px;
+            font-size: var(--font-size-small);
         }
 
         .content {
-            padding: 30px;
+            padding: var(--spacing-xl);
         }
 
         .form-section {
-            background: #f8f9fa;
-            border-radius: 12px;
-            padding: 25px;
-            margin-bottom: 25px;
+            background: var(--color-background-alt);
+            border-radius: var(--radius-md);
+            padding: var(--spacing-lg);
+            margin-bottom: var(--spacing-lg);
         }
 
         .form-section h2 {
-            font-size: 20px;
-            color: #495057;
-            margin-bottom: 20px;
-            border-bottom: 2px solid #667eea;
-            padding-bottom: 10px;
+            font-size: var(--font-size-large);
+            color: var(--color-text);
+            margin-bottom: var(--spacing-lg);
+            border-bottom: 2px solid var(--color-primary);
+            padding-bottom: var(--spacing-sm);
         }
 
         .form-group {
-            margin-bottom: 20px;
+            margin-bottom: var(--spacing-lg);
         }
 
         .form-group label {
             display: block;
-            font-weight: 600;
-            color: #495057;
-            margin-bottom: 8px;
-            font-size: 14px;
+            font-weight: var(--font-weight-semibold);
+            color: var(--color-text);
+            margin-bottom: var(--spacing-sm);
+            font-size: var(--font-size-small);
         }
 
         .form-group input {
             width: 100%;
-            padding: 12px;
-            border: 2px solid #dee2e6;
-            border-radius: 8px;
-            font-size: 14px;
+            padding: var(--spacing-sm);
+            border: 2px solid var(--color-border);
+            border-radius: var(--radius-sm);
+            font-size: var(--font-size-small);
             transition: border-color 0.3s;
+            background: var(--color-surface);
+            color: var(--color-text);
         }
 
         .form-group input:focus {
             outline: none;
-            border-color: #667eea;
+            border-color: var(--color-primary);
+            box-shadow: 0 0 0 4px var(--color-shadow-primary);
         }
 
         .form-group small {
             display: block;
-            color: #6c757d;
-            margin-top: 5px;
-            font-size: 12px;
+            color: var(--color-text-secondary);
+            margin-top: var(--spacing-xs);
+            font-size: var(--font-size-small);
         }
 
         .color-options {
             display: flex;
-            gap: 15px;
-            margin-bottom: 15px;
+            gap: var(--spacing-md);
+            margin-bottom: var(--spacing-md);
             flex-wrap: wrap;
         }
 
@@ -138,7 +119,7 @@
         .color-option label {
             display: flex;
             align-items: center;
-            gap: 8px;
+            gap: var(--spacing-sm);
             cursor: pointer;
         }
 
@@ -166,8 +147,8 @@
         .color-picker-input {
             width: 100%;
             height: 50px;
-            border: 2px solid #dee2e6;
-            border-radius: 8px;
+            border: 2px solid var(--color-border);
+            border-radius: var(--radius-sm);
             cursor: pointer;
             padding: 0;
         }
@@ -181,13 +162,13 @@
         }
 
         .btn {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
+            background: linear-gradient(135deg, var(--color-primary) 0%, var(--color-primary-dark) 100%);
+            color: var(--color-text-on-primary);
             border: none;
-            padding: 14px 35px;
-            border-radius: 8px;
-            font-size: 16px;
-            font-weight: 600;
+            padding: var(--spacing-sm) var(--spacing-xl);
+            border-radius: var(--radius-sm);
+            font-size: var(--font-size-base);
+            font-weight: var(--font-weight-semibold);
             cursor: pointer;
             transition: transform 0.2s;
             width: 100%;
@@ -195,7 +176,7 @@
 
         .btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.4);
+            box-shadow: var(--shadow-md);
         }
 
         .btn:active {
@@ -209,13 +190,13 @@
         }
 
         .preview-section {
-            margin-top: 30px;
+            margin-top: var(--spacing-xl);
             text-align: center;
         }
 
         .preview-section h2 {
-            font-size: 20px;
-            color: #495057;
+            font-size: var(--font-size-large);
+            color: var(--color-text);
             margin-bottom: 20px;
             border-bottom: 2px solid #667eea;
             padding-bottom: 10px;
@@ -376,7 +357,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
+            <a href="../../index.html" class="home-btn" title="返回首页">🏠</a>
             <h1>✍️ 文字图片生成工具</h1>
             <p>输入文字和背景颜色，生成 1024×1024 纯文字图片（低于 50KB）</p>
         </div>
@@ -1207,7 +1188,9 @@
             return cfg;
         }
     </script>
-    <script src="./tools.js"></script>
+    <script src="../../assets/js/tools.js"></script>
+  <script src="../../assets/js/themes.js"></script>
+  <script src="../../assets/js/theme-ui.js"></script>
 </body>
 
 </html>
